# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

*portage-1.8.9.4 (01 Apr 2002)

  31 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: adapted
  movefile() which should preserves timestamps and ownership on files and
  symlinks it moves.

*portage-1.8.9.3 (31 Mar 2002)

  31 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: promising
  rewrite of movefile() not only will probably fix glibc merge bug but also
  speeds up merging at least 20x!  Calling "mv" for every file really make
  things super-slow!

*portage-1.8.9.2 (31 Mar 2002)

  31 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: desperate attempt
  to fix movefile() bug... a hack really.  glibc merges still dying.

*portage-1.8.9.1 (31 Mar 2002)

  31 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: it appears that
  movefile() (using "/bin/mv") can still die if moving a new symlink on top of
  an existing library symlink.  Upon failure, we now use a fallback mechanism
  to use "/bin/sln" to create the new symlink safely.

*portage-1.8.9 (30 Mar 2002)

  30 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: tiny cosmetic
  fix for digest generation.
  
  30 Mar 2002; Daniel Robbins <drobbins@gentoo.org> emerge: entries in the
  world profile will be ignored if at least one version of the package in
  question isn't already merged.  Prevents "--update world" from remerging
  packages that have since been unmerged.
  
  30 Mar 2002; Daniel Robbins <drobbins@gentoo.org> various: changing all
  references from /usr/bin/python to /usr/bin/python2.2.
  
  30 Mar 2002; Daniel Robbins <drobbins@gentoo.org> db-update.py: moving this
  script here from FILESDIR.
  
  30 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: stuff doesn't
  get added to the world profile if it is already an essential ("*") package in
  the system profile.  Keeps things clean and flexible.
